framec_tests/language_specific/csharp/v3_mir/positive/not_at_sol_transition.frm
@target csharp

system S {
    machine:
        $A {
            e() {
                if (x) { a(); -> $B(); b(); }
            }
        }
}
