framec_tests/language_specific/csharp/v3_mir/negative/transition_inline_semicolon_native.frm
@target csharp

system S {
    machine:
        $A {
            e() {
                -> $B(); native();
            }
        }
}

